# fastapi-crud

./: README.md  pyproject.toml  run.py
frontend/: app.py
src/fastapi_crud/: main.py
